--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 .mainbox{
-    background-color: coral;
+    background-color: #cccccc;
     width: 1536px;
+    height: 1200px;
     margin: 0px auto;
 }
 
 .menu{
-    height: 38px;
-    background-color: brown;
+
+    height: 80px;
     text-align: right;
 }
 
@@ -14,31 +15,70 @@
     display:inline;
     padding: 15px;
     position: relative;
-    top: 8px;
+    top: 32px;
     font-family: Tahoma, serif;
     font-size: 15px;
 }
 
 .leftside{
-    background-color: darkgreen;
+
     width: 512px;
     float: left;
 }
 
 
 .main{
-    background-color: darkkhaki;
+
     width: 512px;
     float: left;
 }
 
 .rightside{
-    background-color: aliceblue;
+
     width: 512px;
     float: left;
 }
 
-.footer{
-    background-color: cadetblue;
+.logo{
+    max-width: 160px;
+    display: inline;
+    position: relative;
+    top: 5px;
+    float: left;
+    padding-left: 10px;
 }
 
+.leftside>a>img{
+    max-width: 485px;
+     display: block;
+     height: 800px;
+     padding-left: 25px;
+     padding-bottom: 50px;
+}
+
+.main>a>img{
+    max-width: 485px;
+    display: block;
+    height: 800px;
+    padding-left: 15px;
+    padding-bottom: 50px;
+}
+
+.rightside>a>img{
+    max-width: 485px;
+    display: block;
+    height: 800px;
+    padding-left: 5px;
+    padding-bottom: 50px;
+}
+
+.footer{
+    text-align: center;
+}
+
+.startscreen{
+    margin: 0px auto;
+    background-color: red;
+    width: 1536px;
+    height: 1000px;
+}
