--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .mainbox{
     background-color: #cccccc;
     width: 1536px;
@@ -50,10 +52,10 @@
 
 .leftside>a>img{
     max-width: 485px;
-     display: block;
-     height: 800px;
-     padding-left: 25px;
-     padding-bottom: 50px;
+    display: block;
+    height: 800px;
+    padding-left: 25px;
+    padding-bottom: 50px;
 }
 
 .main>a>img{
@@ -78,7 +80,7 @@
 
 .startscreen{
     margin: 0px auto;
-    background-color: red;
+    background-color: blue;
     width: 1536px;
     height: 1000px;
 }
