Izlaboju kludas, pievienoju video

--- a/styles.css
+++ b/styles.css
@@ -294,4 +294,33 @@ h1{
     width: 600px;
 }
 
+.videoleftside{
+
+    height: 1200px;
+    width: 362px;
+    float: left;
+}
+
+.videomain{
+    text-align: center;
+    width: 812px;
+    height: 1200px;
+    float: left;
+}
+
+.videorightside{
+    text-align: right;
+    height: 1200px;
+    width: 362px;
+    float: left;
+}
+
+.naturemain>a>img{
+    max-width: 300px;
+}
+
+.videomain>h1{
+    font-size: 25px;
+    padding-bottom: 20px;
+}
 
