--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ h1{
 
 .naturemain{
 
-    width: 1212px;
+    width: 1200px;
     height: 1200px;
     float: left;
 }
@@ -291,6 +291,7 @@ h1{
 }
 
 .naturemain>a>img{
+    max-height: 300px;
     width: 600px;
 }
 
